<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_14sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:textColorHint="@color/gray"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="custom"
            app:endIconTint="@color/gray"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:boxStrokeColor="@color/light_gray"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress|phone"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="@dimen/_12sdp"
                android:drawableTint="@color/gray"
                android:padding="@dimen/_12sdp"
                android:layout_gravity="center"
                android:maxLength="50"
                android:letterSpacing="0.05"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textColorHint="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:textColorHint="@color/gray"
            app:boxStrokeErrorColor="@color/red"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:boxStrokeColor="@color/light_gray"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/gray"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_12sdp"
            app:boxCornerRadiusBottomStart="@dimen/_12sdp"
            app:boxCornerRadiusTopEnd="@dimen/_12sdp"
            app:boxCornerRadiusTopStart="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_layout_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/_12sdp"
                android:drawableTint="@color/gray"
                android:padding="@dimen/_12sdp"
                android:layout_gravity="center"
                android:maxLength="30"
                android:letterSpacing="0.05"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:textColorHint="@color/gray"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_20sdp"
            android:layout_margin="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/text_layout_password"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <View
                android:id="@+id/line_view_start"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/text_view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:text="@string/login_by"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:gravity="center"/>

            <View
                android:id="@+id/line_view_end"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@color/gray"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login_by_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bt_login_by_google"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:drawableEnd="@drawable/ic_user"
            android:drawableTint="@color/blue"
            app:cornerRadius="@dimen/_24sdp"
            app:strokeColor="@color/blue"
            app:strokeWidth="@dimen/_1sdp"
            app:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:text="@string/facebook"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_login_by_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/bt_login_by_facebook"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout"
            android:layout_marginEnd="@dimen/_24sdp"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:drawableEnd="@drawable/ic_user"
            android:drawableTint="@color/red"
            app:cornerRadius="@dimen/_24sdp"
            app:strokeColor="@color/red"
            app:strokeWidth="@dimen/_1sdp"
            app:backgroundTint="@color/white"
            android:textAllCaps="false"
            android:text="@string/google"
            android:textColor="@color/red"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:paddingTop="@dimen/_6sdp"
            android:paddingBottom="@dimen/_6sdp"
            android:paddingStart="@dimen/_12sdp"
            android:paddingEnd="@dimen/_12sdp"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@id/line_view_bottom_end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_login_by_facebook" />

        <View
            android:id="@+id/line_view_bottom_start"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="@id/tv_register"
            app:layout_constraintEnd_toEndOf="@id/tv_register"
            app:layout_constraintTop_toBottomOf="@id/tv_register"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/tv_restore_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/restore_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@id/line_view_bottom_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/tv_register"
            app:layout_constraintTop_toBottomOf="@id/bt_login_by_google" />

        <View
            android:id="@+id/line_view_bottom_end"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_2sdp"
            app:layout_constraintStart_toStartOf="@id/tv_restore_password"
            app:layout_constraintEnd_toEndOf="@id/tv_restore_password"
            app:layout_constraintTop_toBottomOf="@id/tv_restore_password"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/gray"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>